HelloUltraviolet/Fixtures/RejectedSource/Statements/MissingRequiredTerminator/Source/Main.uv
//! Rejected statement specimen for a missing required statement terminator.

public procedure missingRequiredTerminatorReference() -> i32 {
    let value: i32 = 1 return value
}
